Update to Spigot 1.21.8